--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@clerk/nextjs": "^4.29.7",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
+    "@types/qs": "^6.9.12",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.336.0",
     "mongodb": "^6.3.0",
     "mongoose": "^8.2.0",
     "next": "14.1.0",
+    "qs": "^6.11.2",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
